Removed rows_read from logging

--- a/notebooks/00_master_orchestrator.ipynb
+++ b/notebooks/00_master_orchestrator.ipynb
@@ -66,7 +66,7 @@
     "run_ts = \"20251001T183103260\"                       # Run timestamp\n",
     "dag_path = \"config/dag_anva_meeus_week.json\"        # DAG configuration path\n",
     "retry_tables = None                                 # Optional: list of table names to retry\n",
-    "force_reload = False                                # If True, ignore logs and reload all\n",
+    "force_reload = True                                # If True, ignore logs and reload all\n",
     "max_workers = 10                                    # Parallel workers for table processing\n",
     "debug = True                                        # Enable debug output"
    ]
@@ -516,7 +516,7 @@
     "    empty_count = sum(1 for r in bronze_results if r['status'] == 'EMPTY')\n",
     "    skipped_count = sum(1 for r in bronze_results if r['status'] == 'SKIPPED')\n",
     "    \n",
-    "    total_rows = sum(r.get('rows_written', 0) or 0 for r in bronze_results)\n",
+    "    total_rows = sum(r.get('rows_processed', 0) or 0 for r in bronze_results)\n",
     "    \n",
     "    # Performance metrics\n",
     "    sum_task_seconds = float(sum(r.get('duration_seconds', 0) or 0 for r in bronze_results))\n",
@@ -577,7 +577,20 @@
    "source": [
     "#spark.sql(\"SHOW TABLES IN logs\").show(truncate=False)\n",
     "#spark.table(\"logs.bronze_run_summary\").printSchema()\n",
-    "#spark.sql(\"drop table if exists logs.silver_run_summary\").show()\n"
+    "#spark.sql(\"drop table if exists logs.silver_run_summary\").show()\n",
+    "#spark.sql(\"select * from logs.bronze_run_summary order by run_end desc limit 5\").show(truncate=False)\n",
+    "\n",
+    "#spark.sql(\"drop table if exists logs.bronze_processing_log\").show()\n",
+    "#spark.sql(\"drop table if exists logs.bronze_run_summary   \").show()\n",
+    "#spark.sql(\"drop table if exists logs.silver_processing_log\").show()\n",
+    "#spark.sql(\"drop table if exists logs.silver_run_summary\").show()\n",
+    "# spark.table(\"logs.bronze_run_summary\") \\\n",
+    "#       .orderBy(\"run_end\", \"source\", \"table_name\") \\\n",
+    "#       .show(20, truncate=False)\n",
+    "\n",
+    "# spark.table(\"logs.bronze_processing_log\") \\\n",
+    "#       .orderBy(\"run_ts\", \"table_name\") \\\n",
+    "#       .show(200, truncate=False)\n"
    ]
   },
   {
@@ -853,7 +866,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.14"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
