--- a/notebooks/01_utils_logging.ipynb
+++ b/notebooks/01_utils_logging.ipynb
@@ -104,9 +104,8 @@
     "    \n",
     "    # Processing results\n",
     "    StructField(\"status\",           StringType(),    False),  # SUCCESS, FAILED, SKIPPED, EMPTY\n",
-    "    StructField(\"rows_read\",        LongType(),      True),   # Rows read from parquet\n",
-    "    StructField(\"rows_written\",     LongType(),      True),   # Rows written to Bronze\n",
-    "    \n",
+    "    StructField(\"rows_processed\",   LongType(), True),   # Rows processed from parquet to Bronze (Delta)\n",
+    "\n",
     "    # Timing\n",
     "    StructField(\"start_time\",       TimestampType(), True),\n",
     "    StructField(\"end_time\",         TimestampType(), True),\n",
@@ -560,8 +559,7 @@
     "            table_name       = r.get(\"table_name\"),\n",
     "            load_mode        = r.get(\"load_mode\"),\n",
     "            status           = r.get(\"status\"),\n",
-    "            rows_read        = r.get(\"rows_read\"),\n",
-    "            rows_written     = r.get(\"rows_written\"),\n",
+    "            rows_processed   = r.get(\"rows_processed\"),\n",
     "            start_time       = r.get(\"start_time\"),\n",
     "            end_time         = r.get(\"end_time\"),\n",
     "            duration_seconds = r.get(\"duration_seconds\"),\n",
