--- a/notebooks/10_bronze_load.ipynb
+++ b/notebooks/10_bronze_load.ipynb
@@ -221,7 +221,7 @@
     "        Dict with processing results:\n",
     "        - log_id, run_id, run_ts, source, table_name, load_mode\n",
     "        - status (SUCCESS, FAILED, SKIPPED, EMPTY)\n",
-    "        - rows_read, rows_written\n",
+    "        - rows_processed\n",
     "        - start_time, end_time, duration_seconds\n",
     "        - error_message, parquet_path, delta_table\n",
     "    \"\"\"\n",
@@ -245,8 +245,7 @@
     "    end_time = None\n",
     "    status = \"RUNNING\"\n",
     "    error_message = None\n",
-    "    rows_read = None\n",
-    "    rows_written = None\n",
+    "    rows_processed = None\n",
     "    \n",
     "    # Early exit for unsupported load modes\n",
     "    if load_mode not in supported_modes:\n",
@@ -264,8 +263,7 @@
     "            \"table_name\": table_name,\n",
     "            \"load_mode\": load_mode,\n",
     "            \"status\": \"SKIPPED\",\n",
-    "            \"rows_read\": None,\n",
-    "            \"rows_written\": None,\n",
+    "            \"rows_processed\": None,\n",
     "            \"start_time\": start_time,\n",
     "            \"end_time\": end_time,\n",
     "            \"duration_seconds\": duration,\n",
@@ -299,15 +297,7 @@
     "    \n",
     "    try:\n",
     "        df = spark.read.parquet(parquet_glob)\n",
-    "        \n",
-    "        # Count rows (only if debug or needed)\n",
-    "        if debug:\n",
-    "            rows_read = df.count()\n",
-    "            print(f\"  Rows read: {rows_read:,}\")\n",
-    "        else:\n",
-    "            # Don't count to save time, estimate from write\n",
-    "            rows_read = None\n",
-    "        \n",
+    "                \n",
     "    except Exception as e:\n",
     "        if is_missing_path_error(e):\n",
     "            # No parquet files - table not exported in this run\n",
@@ -325,8 +315,7 @@
     "                \"table_name\": table_name,\n",
     "                \"load_mode\": load_mode,\n",
     "                \"status\": \"SKIPPED\",\n",
-    "                \"rows_read\": 0,\n",
-    "                \"rows_written\": 0,\n",
+    "                \"rows_processed\": 0,\n",
     "                \"start_time\": start_time,\n",
     "                \"end_time\": end_time,\n",
     "                \"duration_seconds\": duration,\n",
@@ -350,8 +339,7 @@
     "                \"table_name\": table_name,\n",
     "                \"load_mode\": load_mode,\n",
     "                \"status\": \"FAILED\",\n",
-    "                \"rows_read\": None,\n",
-    "                \"rows_written\": None,\n",
+    "                \"rows_processed\": None,\n",
     "                \"start_time\": start_time,\n",
     "                \"end_time\": end_time,\n",
     "                \"duration_seconds\": duration,\n",
@@ -449,15 +437,15 @@
     "        # Get row count from table (more reliable than counting before write)\n",
     "        if load_mode == \"incremental\":\n",
     "            # For incremental, count only this partition\n",
-    "            rows_written = spark.table(delta_table_full) \\\n",
+    "            rows_processed = spark.table(delta_table_full) \\\n",
     "                .where(f\"_bronze_load_ts = '{run_ts}'\") \\\n",
     "                .count()\n",
     "        else:\n",
     "            # For snapshot/window, count entire table\n",
-    "            rows_written = spark.table(delta_table_full).count()\n",
+    "            rows_processed = spark.table(delta_table_full).count()\n",
     "        \n",
     "        # Check for empty result\n",
-    "        if rows_written == 0:\n",
+    "        if rows_processed == 0:\n",
     "            end_time = datetime.utcnow()\n",
     "            duration = int((end_time - start_time).total_seconds())\n",
     "            \n",
@@ -472,8 +460,7 @@
     "                \"table_name\": table_name,\n",
     "                \"load_mode\": load_mode,\n",
     "                \"status\": \"EMPTY\",\n",
-    "                \"rows_read\": 0,\n",
-    "                \"rows_written\": 0,\n",
+    "                \"rows_processed\": 0,\n",
     "                \"start_time\": start_time,\n",
     "                \"end_time\": end_time,\n",
     "                \"duration_seconds\": duration,\n",
@@ -520,11 +507,11 @@
     "                \n",
     "                # Count rows\n",
     "                if load_mode == \"incremental\":\n",
-    "                    rows_written = spark.table(delta_table_full) \\\n",
+    "                    rows_processed = spark.table(delta_table_full) \\\n",
     "                        .where(f\"_bronze_load_ts = '{run_ts}'\") \\\n",
     "                        .count()\n",
     "                else:\n",
-    "                    rows_written = spark.table(delta_table_full).count()\n",
+    "                    rows_processed = spark.table(delta_table_full).count()\n",
     "                \n",
     "                status = \"SUCCESS\"\n",
     "                error_message = f\"Initial write failed but table was recreated. Original error: {str(e)[:300]}\"\n",
@@ -553,7 +540,7 @@
     "    duration = int((end_time - start_time).total_seconds())\n",
     "    \n",
     "    if debug:\n",
-    "        print(f\"[{table_name}] {status} in {duration}s ({rows_written:,} rows)\")\n",
+    "        print(f\"[{table_name}] {status} in {duration}s ({rows_processed:,} rows)\")\n",
     "    \n",
     "    return {\n",
     "        \"log_id\": log_id,\n",
@@ -563,8 +550,7 @@
     "        \"table_name\": table_name,\n",
     "        \"load_mode\": load_mode,\n",
     "        \"status\": status,\n",
-    "        \"rows_read\": rows_read,\n",
-    "        \"rows_written\": rows_written,\n",
+    "        \"rows_processed\": rows_processed,\n",
     "        \"start_time\": start_time,\n",
     "        \"end_time\": end_time,\n",
     "        \"duration_seconds\": duration,\n",
