--- a/notebooks/10_bronze_load.ipynb
+++ b/notebooks/10_bronze_load.ipynb
@@ -63,16 +63,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.sql import DataFrame\n",
     "from pyspark.sql import functions as F\n",
     "from pyspark.sql.functions import (\n",
     "    lit, current_timestamp, input_file_name, col, year, month\n",
     ")\n",
     "from datetime import datetime\n",
-    "from typing import Dict, Any, Optional\n",
+    "from typing import Dict, Any\n",
     "from uuid import uuid4\n",
     "import os\n",
     "from modules.path_utils import build_parquet_dir\n",
+    "from pyspark.sql import functions as F\n",
     "\n",
     "print(\"✓ Imports loaded\")"
    ]
@@ -174,6 +174,23 @@
     "        or \"protocol\" in msg and \"unsupported\" in msg\n",
     "        or (\"delta log\" in msg and \"error\" in msg)\n",
     "    )\n",
+    "\n",
+    "\n",
+    "def get_last_num_output_rows(table_fullname: str) -> int | None:\n",
+    "    \"\"\"\n",
+    "    Get the number of written rows from the last Delta write\n",
+    "    for this table using DESCRIBE HISTORY.\n",
+    "    \"\"\"\n",
+    "    history = spark.sql(f\"DESCRIBE HISTORY {table_fullname}\")\n",
+    "    row = (\n",
+    "        history\n",
+    "        .orderBy(F.col(\"version\").desc())\n",
+    "        .select(F.col(\"operationMetrics\")[\"numOutputRows\"].alias(\"rows\"))\n",
+    "        .first()\n",
+    "    )\n",
+    "    return int(row[\"rows\"]) if row and row[\"rows\"] is not None else None\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "print(\"✓ Helper functions defined\")"
@@ -433,16 +450,7 @@
     "        \n",
     "        # Execute write\n",
     "        writer.saveAsTable(delta_table_full)\n",
-    "        \n",
-    "        # Get row count from table (more reliable than counting before write)\n",
-    "        if load_mode == \"incremental\":\n",
-    "            # For incremental, count only this partition\n",
-    "            rows_processed = spark.table(delta_table_full) \\\n",
-    "                .where(f\"_bronze_load_ts = '{run_ts}'\") \\\n",
-    "                .count()\n",
-    "        else:\n",
-    "            # For snapshot/window, count entire table\n",
-    "            rows_processed = spark.table(delta_table_full).count()\n",
+    "        rows_processed = get_last_num_output_rows(delta_table_full)\n",
     "        \n",
     "        # Check for empty result\n",
     "        if rows_processed == 0:\n",
@@ -504,7 +512,8 @@
     "                        .option(\"overwriteSchema\", \"true\")\n",
     "                \n",
     "                writer.saveAsTable(delta_table_full)\n",
-    "                \n",
+    "                rows_processed = get_last_num_output_rows(delta_table_full)\n",
+    "\n",
     "                # Count rows\n",
     "                if load_mode == \"incremental\":\n",
     "                    rows_processed = spark.table(delta_table_full) \\\n",
