Fixed utcnow warning

--- a/notebooks/00_master_orchestrator.ipynb
+++ b/notebooks/00_master_orchestrator.ipynb
@@ -86,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datetime import datetime\n",
+    "from datetime import datetime, timezone\n",
     "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
     "from typing import List, Dict, Any\n",
     "import json\n",
@@ -391,7 +391,7 @@
     "print(f\"  Workers: {max_workers}\")\n",
     "print(f\"  Tables: {len(tables_to_process)}\")\n",
     "\n",
-    "bronze_start = datetime.utcnow()\n",
+    "bronze_start = datetime.now(timezone.utc)\n",
     "bronze_results = []\n",
     "\n",
     "# Filter tables if not force_reload (check logs)\n",
@@ -445,8 +445,8 @@
     "                \"status\": \"FAILED\",\n",
     "                \"rows_read\": None,\n",
     "                \"rows_written\": None,\n",
-    "                \"start_time\": datetime.utcnow(),\n",
-    "                \"end_time\": datetime.utcnow(),\n",
+    "                \"start_time\": datetime.now(timezone.utc),\n",
+    "                \"end_time\": datetime.now(timezone.utc),\n",
     "                \"duration_seconds\": 0,\n",
     "                \"error_message\": f\"Unhandled exception: {str(e)[:500]}\",\n",
     "                \"parquet_path\": None,\n",
@@ -481,7 +481,7 @@
     "                f\"{(result.get('rows_written') or 0):>10,} rows {error_snippet}\"\n",
     "                )\n",
     "\n",
-    "bronze_end = datetime.utcnow()\n",
+    "bronze_end = datetime.now(timezone.utc)\n",
     "bronze_duration = int((bronze_end - bronze_start).total_seconds())\n",
     "\n",
     "print(f\"\\n✓ Bronze processing completed in {bronze_duration}s\")\n",
@@ -646,7 +646,7 @@
     "if not tables_for_silver:\n",
     "    print(f\"\\n  ℹ️  No tables to process in Silver\")\n",
     "else:\n",
-    "    silver_start = datetime.utcnow()\n",
+    "    silver_start = datetime.now(timezone.utc)\n",
     "    \n",
     "    print(f\"\\n  🚀 Processing {len(tables_for_silver)} tables in parallel...\\n\")\n",
     "    \n",
@@ -677,8 +677,8 @@
     "                \"bronze_rows\": None,\n",
     "                \"bronze_table\": None,\n",
     "                \"silver_table\": None,\n",
-    "                \"start_time\": datetime.utcnow(),\n",
-    "                \"end_time\": datetime.utcnow(),\n",
+    "                \"start_time\": datetime.now(timezone.utc),\n",
+    "                \"end_time\": datetime.now(timezone.utc),\n",
     "                \"duration_seconds\": 0,\n",
     "                \"error_message\": f\"Unhandled exception: {str(e)[:500]}\",\n",
     "            }\n",
@@ -702,7 +702,7 @@
     "            print(f\"    [{completed}/{len(tables_for_silver)}] {status_icon} {result['table_name']:<30} {result['status']:<10}{delete_info}\")\n",
     "            \n",
     "    \n",
-    "    silver_end = datetime.utcnow()\n",
+    "    silver_end = datetime.now(timezone.utc)\n",
     "    silver_duration = int((silver_end - silver_start).total_seconds())\n",
     "    \n",
     "    print(f\"\\n✓ Silver processing completed in {silver_duration}s\")"
@@ -791,7 +791,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_end = datetime.utcnow()\n",
+    "total_end = datetime.now(timezone.utc)\n",
     "total_duration = int((total_end - bronze_start).total_seconds())\n",
     "\n",
     "print(\"\\n\" + \"=\"*80)\n",
@@ -852,7 +852,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dwh-spark-processing (3.11.14)",
+   "display_name": "dwh-spark-processing (3.12.12)",
    "language": "python",
    "name": "python3"
   },
