--- a/notebooks/10_bronze_load.ipynb
+++ b/notebooks/10_bronze_load.ipynb
@@ -67,7 +67,7 @@
     "from pyspark.sql.functions import (\n",
     "    lit, current_timestamp, input_file_name, col, year, month\n",
     ")\n",
-    "from datetime import datetime\n",
+    "from datetime import datetime, timezone\n",
     "from typing import Dict, Any\n",
     "from uuid import uuid4\n",
     "import os\n",
@@ -258,7 +258,7 @@
     "    \n",
     "    # Initialize metrics\n",
     "    log_id = f\"{source_name}:{table_name}:{run_ts}:{uuid4().hex[:8]}\"\n",
-    "    start_time = datetime.utcnow()\n",
+    "    start_time = datetime.now(timezone.utc)\n",
     "    end_time = None\n",
     "    status = \"RUNNING\"\n",
     "    error_message = None\n",
@@ -266,7 +266,7 @@
     "    \n",
     "    # Early exit for unsupported load modes\n",
     "    if load_mode not in supported_modes:\n",
-    "        end_time = datetime.utcnow()\n",
+    "        end_time = datetime.now(timezone.utc)\n",
     "        duration = int((end_time - start_time).total_seconds())\n",
     "        \n",
     "        if debug:\n",
@@ -318,7 +318,7 @@
     "    except Exception as e:\n",
     "        if is_missing_path_error(e):\n",
     "            # No parquet files - table not exported in this run\n",
-    "            end_time = datetime.utcnow()\n",
+    "            end_time = datetime.now(timezone.utc)\n",
     "            duration = int((end_time - start_time).total_seconds())\n",
     "            \n",
     "            if debug:\n",
@@ -342,7 +342,7 @@
     "            }\n",
     "        else:\n",
     "            # Other read error\n",
-    "            end_time = datetime.utcnow()\n",
+    "            end_time = datetime.now(timezone.utc)\n",
     "            duration = int((end_time - start_time).total_seconds())\n",
     "            \n",
     "            if debug:\n",
@@ -454,7 +454,7 @@
     "        \n",
     "        # Check for empty result\n",
     "        if rows_processed == 0:\n",
-    "            end_time = datetime.utcnow()\n",
+    "            end_time = datetime.now(timezone.utc)\n",
     "            duration = int((end_time - start_time).total_seconds())\n",
     "            \n",
     "            if debug:\n",
@@ -545,7 +545,7 @@
     "    # STEP 4: Return Results\n",
     "    # ========================================================================\n",
     "    \n",
-    "    end_time = datetime.utcnow()\n",
+    "    end_time = datetime.now(timezone.utc)\n",
     "    duration = int((end_time - start_time).total_seconds())\n",
     "    \n",
     "    if debug:\n",
