Logging table definition update

--- a/notebooks/00_master_orchestrator.ipynb
+++ b/notebooks/00_master_orchestrator.ipynb
@@ -281,6 +281,7 @@
    "source": [
     "# Generate unique run ID\n",
     "RUN_ID = f\"{run_ts}_{uuid4().hex[:8]}\"\n",
+    "run_date = build_run_date(run_ts)\n",
     "print(f\"\\n🆔 Run ID: {RUN_ID}\")"
    ]
   },
@@ -482,7 +483,7 @@
     "                )\n",
     "\n",
     "bronze_end = datetime.now(timezone.utc)\n",
-    "bronze_duration = int((bronze_end - bronze_start).total_seconds())\n",
+    "bronze_duration = float((bronze_end - bronze_start).total_seconds())\n",
     "\n",
     "print(f\"\\n✓ Bronze processing completed in {bronze_duration}s\")\n",
     "\n",
@@ -521,7 +522,7 @@
     "    # Performance metrics\n",
     "    sum_task_seconds = float(sum(r.get('duration_seconds', 0) or 0 for r in bronze_results))\n",
     "    theoretical_min_sec = float(sum_task_seconds / max_workers if max_workers > 0 else sum_task_seconds)\n",
-    "    actual_time_sec = float(bronze_duration)\n",
+    "    actual_time_sec = bronze_duration # float\n",
     "    efficiency_pct = float((theoretical_min_sec / actual_time_sec * 100) if actual_time_sec > 0 else 0)\n",
     "    \n",
     "    # Failed tables list\n",
@@ -529,27 +530,29 @@
     "    \n",
     "    # Log summary\n",
     "    bronze_summary = {\n",
-    "        \"run_id\": RUN_ID,\n",
-    "        \"source\": source,\n",
-    "        \"run_ts\": run_ts,\n",
-    "        \"run_start\": bronze_start,\n",
-    "        \"run_end\": bronze_end,\n",
-    "        \"duration_seconds\": bronze_duration,\n",
-    "        \"total_tables\": len(bronze_results),\n",
-    "        \"tables_success\": success_count,\n",
-    "        \"tables_empty\": empty_count,\n",
-    "        \"tables_failed\": failed_count,\n",
-    "        \"tables_skipped\": skipped_count,\n",
-    "        \"total_rows\": total_rows,\n",
-    "        \"workers\": max_workers,\n",
-    "        \"sum_task_seconds\": sum_task_seconds,\n",
-    "        \"theoretical_min_sec\": theoretical_min_sec,\n",
-    "        \"actual_time_sec\": actual_time_sec,\n",
-    "        \"efficiency_pct\": efficiency_pct,\n",
-    "        \"failed_tables\": failed_tables,\n",
+    "    \"run_id\": RUN_ID,\n",
+    "    \"run_date\": run_date,\n",
+    "    \"run_ts\": run_ts,\n",
+    "    \"source\": source,\n",
+    "    \"total_tables\": len(bronze_results),\n",
+    "    \"tables_success\": success_count,\n",
+    "    \"tables_empty\": empty_count,\n",
+    "    \"tables_failed\": failed_count,\n",
+    "    \"tables_skipped\": skipped_count,\n",
+    "    \"total_rows\": total_rows,\n",
+    "    \"workers\": max_workers,\n",
+    "    \"sum_task_seconds\": sum_task_seconds,\n",
+    "    \"theoretical_min_sec\": theoretical_min_sec,\n",
+    "    \"actual_time_sec\": actual_time_sec,\n",
+    "    \"efficiency_pct\": efficiency_pct,\n",
+    "    \"run_start\": bronze_start,\n",
+    "    \"run_end\": bronze_end,\n",
+    "    \"duration_seconds\": bronze_duration,\n",
+    "    \"error_message\": None,\n",
+    "    \"failed_tables\": failed_tables,\n",
     "    }\n",
-    "    \n",
-    "    log_bronze_summary(bronze_summary)\n",
+    "\n",
+    "    run_log_id = log_bronze_summary(bronze_summary)\n",
     "    \n",
     "    # Print summary\n",
     "    print(f\"\\n  Summary:\")\n",
@@ -577,20 +580,21 @@
    "source": [
     "#spark.sql(\"SHOW TABLES IN logs\").show(truncate=False)\n",
     "#spark.table(\"logs.bronze_run_summary\").printSchema()\n",
+    "\n",
     "#spark.sql(\"drop table if exists logs.silver_run_summary\").show()\n",
     "#spark.sql(\"select * from logs.bronze_run_summary order by run_end desc limit 5\").show(truncate=False)\n",
     "\n",
-    "#spark.sql(\"drop table if exists logs.bronze_processing_log\").show()\n",
-    "#spark.sql(\"drop table if exists logs.bronze_run_summary   \").show()\n",
-    "#spark.sql(\"drop table if exists logs.silver_processing_log\").show()\n",
-    "#spark.sql(\"drop table if exists logs.silver_run_summary\").show()\n",
-    "# spark.table(\"logs.bronze_run_summary\") \\\n",
-    "#       .orderBy(\"run_end\", \"source\", \"table_name\") \\\n",
-    "#       .show(20, truncate=False)\n",
+    "# spark.sql(\"drop table if exists logs.bronze_processing_log\").show()\n",
+    "# spark.sql(\"drop table if exists logs.bronze_run_summary\").show()\n",
+    "# spark.sql(\"drop table if exists logs.silver_processing_log\").show()\n",
+    "# spark.sql(\"drop table if exists logs.silver_run_summary\").show()\n",
+    "spark.table(\"logs.bronze_run_summary\") \\\n",
+    "      .orderBy(\"run_end\", \"source\") \\\n",
+    "      .show(20, truncate=False)\n",
     "\n",
-    "# spark.table(\"logs.bronze_processing_log\") \\\n",
-    "#       .orderBy(\"run_ts\", \"table_name\") \\\n",
-    "#       .show(200, truncate=False)\n"
+    "spark.table(\"logs.bronze_processing_log\") \\\n",
+    "      .orderBy(\"run_ts\", \"table_name\") \\\n",
+    "      .show(200, truncate=False)\n"
    ]
   },
   {
