ISSUE FIX TODO: logging error

--- a/notebooks/00_master_orchestrator.ipynb
+++ b/notebooks/00_master_orchestrator.ipynb
@@ -445,7 +445,7 @@
     "                \"load_mode\": table_def.get('load_mode'),\n",
     "                \"status\": \"FAILED\",\n",
     "                \"rows_read\": None,\n",
-    "                \"rows_written\": None,\n",
+    "                \"rows_processed\": None,\n",
     "                \"start_time\": datetime.now(timezone.utc),\n",
     "                \"end_time\": datetime.now(timezone.utc),\n",
     "                \"duration_seconds\": 0,\n",
@@ -479,7 +479,7 @@
     "            print(\n",
     "                f\"[{completed}/{len(tables_to_process_bronze)}]\"\n",
     "                f\"{status_icon} {result['table_name']:<30} {result['status']:<10} \"\n",
-    "                f\"{(result.get('rows_written') or 0):>10,} rows {error_snippet}\"\n",
+    "                f\"{(result.get('rows_processed') or 0):>10,} rows {error_snippet}\"\n",
     "                )\n",
     "\n",
     "bronze_end = datetime.now(timezone.utc)\n",
@@ -507,10 +507,7 @@
    "source": [
     "if bronze_results:\n",
     "    print(f\"\\n📊 Logging Bronze results...\")\n",
-    "    \n",
-    "    # Batch log\n",
-    "    log_bronze_batch(bronze_results)\n",
-    "    \n",
+    "        \n",
     "    # Calculate summary statistics\n",
     "    success_count = sum(1 for r in bronze_results if r['status'] == 'SUCCESS')\n",
     "    failed_count = sum(1 for r in bronze_results if r['status'] == 'FAILED')\n",
@@ -552,7 +549,11 @@
     "    \"failed_tables\": failed_tables,\n",
     "    }\n",
     "\n",
-    "    run_log_id = log_bronze_summary(bronze_summary)\n",
+    "    run_log_id = log_bronze_summary(summary=bronze_summary)\n",
+    "\n",
+    "    # Batch log\n",
+    "    log_bronze_batch(bronze_results=bronze_results, run_log_id=run_log_id)\n",
+    "\n",
     "    \n",
     "    # Print summary\n",
     "    print(f\"\\n  Summary:\")\n",
@@ -578,23 +579,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#spark.sql(\"SHOW TABLES IN logs\").show(truncate=False)\n",
+    "spark.sql(\"SHOW TABLES IN logs\").show(truncate=False)\n",
+    "#spark.table(\"logs.bronze_processing_log\").printSchema()\n",
     "#spark.table(\"logs.bronze_run_summary\").printSchema()\n",
     "\n",
     "#spark.sql(\"drop table if exists logs.silver_run_summary\").show()\n",
     "#spark.sql(\"select * from logs.bronze_run_summary order by run_end desc limit 5\").show(truncate=False)\n",
     "\n",
-    "# spark.sql(\"drop table if exists logs.bronze_processing_log\").show()\n",
-    "# spark.sql(\"drop table if exists logs.bronze_run_summary\").show()\n",
+    "#spark.sql(\"drop table if exists logs.bronze_processing_log\").show()\n",
+    "#spark.sql(\"drop table if exists logs.bronze_run_summary\").show()\n",
+    "\n",
     "# spark.sql(\"drop table if exists logs.silver_processing_log\").show()\n",
     "# spark.sql(\"drop table if exists logs.silver_run_summary\").show()\n",
-    "spark.table(\"logs.bronze_run_summary\") \\\n",
-    "      .orderBy(\"run_end\", \"source\") \\\n",
-    "      .show(20, truncate=False)\n",
+    "# spark.table(\"logs.bronze_run_summary\") \\\n",
+    "#       .orderBy(\"run_end\", \"source\") \\\n",
+    "#       .show(20, truncate=False)\n",
     "\n",
-    "spark.table(\"logs.bronze_processing_log\") \\\n",
-    "      .orderBy(\"run_ts\", \"table_name\") \\\n",
-    "      .show(200, truncate=False)\n"
+    "# spark.table(\"logs.bronze_processing_log\") \\\n",
+    "#       .orderBy(\"run_ts\", \"table_name\") \\\n",
+    "#       .show(200, truncate=False)\n"
    ]
   },
   {
