--- a/notebooks/01_utils_logging.ipynb
+++ b/notebooks/01_utils_logging.ipynb
@@ -91,6 +91,7 @@
     "bronze_processing_log_schema = StructType([\n",
     "    # Identifiers\n",
     "    StructField(\"log_id\",           StringType(),    False),  # Unique log entry ID\n",
+    "    StructField(\"run_log_id\",       StringType(),    False),  # FK to bronze_run_summary.log_id\n",
     "    StructField(\"run_id\",           StringType(),    False),  # Run identifier\n",
     "    StructField(\"run_date\",         DateType(),      False),  # Partition key (derived from run_ts)\n",
     "    StructField(\"run_ts\",           StringType(),    False),  # Run timestamp (yyyyMMddTHHmmssSSS)\n",
@@ -98,11 +99,12 @@
     "    # Source information\n",
     "    StructField(\"source\",           StringType(),    False),  # Source system name\n",
     "    StructField(\"table_name\",       StringType(),    False),  # Table name (partition key)\n",
+    "    StructField(\"partition_key\",    StringType(),    True),   # new: optional partition key\n",
     "    StructField(\"load_mode\",        StringType(),    True),   # snapshot, incremental, window\n",
     "    \n",
     "    # Processing results\n",
     "    StructField(\"status\",           StringType(),    False),  # SUCCESS, FAILED, SKIPPED, EMPTY\n",
-    "    StructField(\"rows_processed\",   LongType(), True),   # Rows processed from parquet to Bronze (Delta)\n",
+    "    StructField(\"rows_processed\",   LongType(),      True),   # Rows processed from parquet to Bronze (Delta)\n",
     "\n",
     "    # Timing\n",
     "    StructField(\"start_time\",       TimestampType(), True),\n",
@@ -173,40 +175,6 @@
     "        StructField(\"error_message\",            StringType(), True),        # batch-level error, if any\n",
     "        ]\n",
     ")\n",
-    "\n",
-    "\n",
-    "# bronze_summary_schema = StructType([\n",
-    "#     # Run identifiers\n",
-    "#     StructField(\"run_id\",              StringType(),    False),\n",
-    "#     StructField(\"source\",              StringType(),    False),\n",
-    "#     StructField(\"run_ts\",              StringType(),    False),\n",
-    "#     StructField(\"run_date\",            DateType(),      False),\n",
-    "    \n",
-    "#     # Timing\n",
-    "#     StructField(\"run_start\",           TimestampType(), False),\n",
-    "#     StructField(\"run_end\",             TimestampType(), True),\n",
-    "#     StructField(\"duration_seconds\",    LongType(),      True),\n",
-    "    \n",
-    "#     # Table counts\n",
-    "#     StructField(\"total_tables\",        LongType(),      False),\n",
-    "#     StructField(\"tables_success\",      LongType(),      True),\n",
-    "#     StructField(\"tables_empty\",        LongType(),      True),\n",
-    "#     StructField(\"tables_failed\",       LongType(),      True),\n",
-    "#     StructField(\"tables_skipped\",      LongType(),      True),\n",
-    "    \n",
-    "#     # Row counts\n",
-    "#     StructField(\"total_rows\",          LongType(),      True),\n",
-    "    \n",
-    "#     # Performance metrics\n",
-    "#     StructField(\"workers\",             IntegerType(),   True),  # Parallel workers used\n",
-    "#     StructField(\"sum_task_seconds\",    DoubleType(),    True),  # Sum of all table durations\n",
-    "#     StructField(\"theoretical_min_sec\", DoubleType(),    True),  # Sum / workers\n",
-    "#     StructField(\"actual_time_sec\",     DoubleType(),    True),  # Wall clock time\n",
-    "#     StructField(\"efficiency_pct\",      DoubleType(),    True),  # (theoretical / actual) * 100\n",
-    "    \n",
-    "#     # Failed tables list\n",
-    "#     StructField(\"failed_tables\",       StringType(),    True),  # JSON array of failed table names\n",
-    "# ])\n",
     "\n",
     "print(f\"Bronze summary schema defined: {BRONZE_SUMMARY_TABLE_FULLNAME}\")"
    ]
@@ -434,12 +402,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def log_bronze_batch(records: List[Dict[str, Any]]) -> None:\n",
+    "def log_bronze_batch(bronze_results: List[Dict[str, Any]], run_log_id: str) -> None:\n",
     "    \"\"\"\n",
     "    Write many Bronze log records in a single batch append.\n",
     "    \n",
     "    Args:\n",
-    "        records: List of dicts with Bronze processing results\n",
+    "        bronze_results: List of dicts with Bronze processing results\n",
     "    \n",
     "    Each record should contain:\n",
     "        - log_id, run_id, run_ts, source, table_name, load_mode\n",
@@ -447,40 +415,47 @@
     "        - start_time, end_time, duration_seconds\n",
     "        - error_message, parquet_path, delta_table\n",
     "    \"\"\"\n",
-    "    if not records:\n",
+    "    if not bronze_results:\n",
     "        return\n",
     "    \n",
     "    rows = []\n",
-    "    for r in records:\n",
-    "        run_ts = r.get(\"run_ts\")\n",
-    "        if not run_ts:\n",
-    "            raise ValueError(\"Bronze log record is missing run_ts\")\n",
+    "    for r in bronze_results:\n",
+    "        # run_ts = r.get(\"run_ts\")\n",
+    "        # if not run_ts:\n",
+    "        #     raise ValueError(\"Bronze log record is missing run_ts\")\n",
     "        \n",
-    "        # Build run_date from run_ts\n",
-    "        rd = r.get(\"run_date\")\n",
-    "        if rd is None:\n",
-    "            rd = build_run_date(run_ts)\n",
+    "        # # Build run_date from run_ts\n",
+    "        # rd = r.get(\"run_date\")\n",
+    "        # if rd is None:\n",
+    "        #     rd = build_run_date(run_ts)\n",
+    "\n",
+    "        row_log_id = r.get(\"log_id\") or f\"{run_log_id}_{uuid4().hex[:8]}\"\n",
+    "        partition_key = r.get(\"partition_key\") or r.get(\"run_ts\")\n",
     "        \n",
     "        # Truncate error message\n",
     "        error_msg = truncate_error_message(r.get(\"error_message\"))\n",
     "        \n",
-    "        rows.append(Row(\n",
-    "            log_id           = r.get(\"log_id\"),\n",
-    "            run_id           = r.get(\"run_id\"),\n",
-    "            run_date         = rd,\n",
-    "            run_ts           = run_ts,\n",
-    "            source           = r.get(\"source\"),\n",
-    "            table_name       = r.get(\"table_name\"),\n",
-    "            load_mode        = r.get(\"load_mode\"),\n",
-    "            status           = r.get(\"status\"),\n",
-    "            rows_processed   = r.get(\"rows_processed\"),\n",
-    "            start_time       = r.get(\"start_time\"),\n",
-    "            end_time         = r.get(\"end_time\"),\n",
-    "            duration_seconds = r.get(\"duration_seconds\"),\n",
-    "            error_message    = error_msg,\n",
-    "            parquet_path     = r.get(\"parquet_path\"),\n",
-    "            delta_table      = r.get(\"delta_table\"),\n",
-    "        ))\n",
+    "        rows.append(\n",
+    "            (\n",
+    "                row_log_id,\n",
+    "                run_log_id,\n",
+    "                r.get(\"run_id\"),\n",
+    "                r.get(\"run_date\"),\n",
+    "                r.get(\"run_ts\"),\n",
+    "                r.get(\"source\"),\n",
+    "                r.get(\"table_name\"),\n",
+    "                partition_key,\n",
+    "                r.get(\"load_mode\"),\n",
+    "                r.get(\"status\"),\n",
+    "                r.get(\"rows_processed\"),\n",
+    "                r.get(\"start_time\"),\n",
+    "                r.get(\"end_time\"),\n",
+    "                r.get(\"duration_seconds\"),\n",
+    "                error_msg,\n",
+    "                r.get(\"parquet_path\"),\n",
+    "                r.get(\"delta_table\"),\n",
+    "            )\n",
+    "        )\n",
     "    \n",
     "    df = spark.createDataFrame(rows, schema=bronze_processing_log_schema)\n",
     "    \n",
@@ -489,7 +464,7 @@
     "       .mode(\"append\")\n",
     "       .saveAsTable(BRONZE_LOG_TABLE_FULLNAME))\n",
     "    \n",
-    "    print(f\"✓ Logged {len(records)} Bronze records to {BRONZE_LOG_TABLE_FULLNAME}\")\n",
+    "    print(f\"✓ Logged {len(bronze_results)} Bronze records to {BRONZE_LOG_TABLE_FULLNAME}\")\n",
     "\n",
     "def log_bronze_summary(summary: dict) -> str:\n",
     "    \"\"\"\n",
@@ -546,58 +521,6 @@
     "    )\n",
     "\n",
     "    return log_id\n",
-    "\n",
-    "\n",
-    "# def log_bronze_summary(summary: Dict[str, Any]) -> None:\n",
-    "#     \"\"\"\n",
-    "#     Write Bronze run summary.\n",
-    "    \n",
-    "#     Args:\n",
-    "#         summary: Dict with run-level statistics\n",
-    "#     \"\"\"\n",
-    "#     run_ts = summary.get(\"run_ts\")\n",
-    "#     if not run_ts:\n",
-    "#         raise ValueError(\"Summary missing run_ts\")\n",
-    "    \n",
-    "#     run_date = summary.get(\"run_date\")\n",
-    "#     if run_date is None:\n",
-    "#         run_date = build_run_date(run_ts)\n",
-    "    \n",
-    "#     # Convert failed_tables list to JSON string\n",
-    "#     import json\n",
-    "#     failed_tables = summary.get(\"failed_tables\", [])\n",
-    "#     failed_tables_json = json.dumps(failed_tables) if failed_tables else None\n",
-    "    \n",
-    "#     row = Row(\n",
-    "#         run_id              = summary.get(\"run_id\"),\n",
-    "#         source              = summary.get(\"source\"),\n",
-    "#         run_ts              = run_ts,\n",
-    "#         run_date            = run_date,\n",
-    "#         run_start           = summary.get(\"run_start\"),\n",
-    "#         run_end             = summary.get(\"run_end\"),\n",
-    "#         duration_seconds    = summary.get(\"duration_seconds\"),\n",
-    "#         total_tables        = summary.get(\"total_tables\"),\n",
-    "#         tables_success      = summary.get(\"tables_success\"),\n",
-    "#         tables_empty        = summary.get(\"tables_empty\"),\n",
-    "#         tables_failed       = summary.get(\"tables_failed\"),\n",
-    "#         tables_skipped      = summary.get(\"tables_skipped\"),\n",
-    "#         total_rows          = summary.get(\"total_rows\"),\n",
-    "#         workers             = summary.get(\"workers\"),\n",
-    "#         sum_task_seconds    = summary.get(\"sum_task_seconds\"),\n",
-    "#         theoretical_min_sec = summary.get(\"theoretical_min_sec\"),\n",
-    "#         actual_time_sec     = summary.get(\"actual_time_sec\"),\n",
-    "#         efficiency_pct      = summary.get(\"efficiency_pct\"),\n",
-    "#         failed_tables       = failed_tables_json,\n",
-    "#     )\n",
-    "    \n",
-    "#     df = spark.createDataFrame([row], schema=bronze_summary_schema)\n",
-    "    \n",
-    "#     (df.write\n",
-    "#        .format(\"delta\")\n",
-    "#        .mode(\"append\")\n",
-    "#        .saveAsTable(BRONZE_SUMMARY_TABLE_FULLNAME))\n",
-    "    \n",
-    "#     print(f\"✓ Logged Bronze summary to {BRONZE_SUMMARY_TABLE_FULLNAME}\")\n",
     "\n",
     "\n",
     "print(\"✓ Bronze logging functions defined\")"
