Fixed logging issue where run_date equals None

--- a/notebooks/00_master_orchestrator.ipynb
+++ b/notebooks/00_master_orchestrator.ipynb
@@ -431,6 +431,7 @@
     "                table_def=table_def,\n",
     "                source_name=source,\n",
     "                run_ts=run_ts,\n",
+    "                run_date=run_date,\n",
     "                base_files=base_files,\n",
     "                debug=False  # Disable per-table debug in parallel mode\n",
     "            )\n",
@@ -439,6 +440,7 @@
     "            return {\n",
     "                \"log_id\": f\"{source}:{table_def['name']}:{run_ts}:error\",\n",
     "                \"run_id\": RUN_ID,\n",
+    "                \"run_date\": run_date,\n",
     "                \"run_ts\": run_ts,\n",
     "                \"source\": source,\n",
     "                \"table_name\": table_def['name'],\n",
@@ -551,7 +553,6 @@
     "\n",
     "    run_log_id = log_bronze_summary(summary=bronze_summary)\n",
     "\n",
-    "    # Batch log\n",
     "    log_bronze_batch(bronze_results=bronze_results, run_log_id=run_log_id)\n",
     "\n",
     "    \n",
@@ -579,7 +580,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spark.sql(\"SHOW TABLES IN logs\").show(truncate=False)\n",
+    "#spark.sql(\"SHOW TABLES IN logs\").show(truncate=False)\n",
     "#spark.table(\"logs.bronze_processing_log\").printSchema()\n",
     "#spark.table(\"logs.bronze_run_summary\").printSchema()\n",
     "\n",
@@ -591,13 +592,13 @@
     "\n",
     "# spark.sql(\"drop table if exists logs.silver_processing_log\").show()\n",
     "# spark.sql(\"drop table if exists logs.silver_run_summary\").show()\n",
-    "# spark.table(\"logs.bronze_run_summary\") \\\n",
-    "#       .orderBy(\"run_end\", \"source\") \\\n",
-    "#       .show(20, truncate=False)\n",
+    "spark.table(\"logs.bronze_run_summary\") \\\n",
+    "      .orderBy(\"run_end\", \"source\") \\\n",
+    "      .show(20, truncate=False)\n",
     "\n",
-    "# spark.table(\"logs.bronze_processing_log\") \\\n",
-    "#       .orderBy(\"run_ts\", \"table_name\") \\\n",
-    "#       .show(200, truncate=False)\n"
+    "spark.table(\"logs.bronze_processing_log\") \\\n",
+    "      .orderBy(\"run_ts\", \"table_name\") \\\n",
+    "      .show(200, truncate=False)\n"
    ]
   },
   {
