--- a/notebooks/01_utils_logging.ipynb
+++ b/notebooks/01_utils_logging.ipynb
@@ -417,7 +417,7 @@
     "    \"\"\"\n",
     "    if not bronze_results:\n",
     "        return\n",
-    "    \n",
+    "\n",
     "    rows = []\n",
     "    for r in bronze_results:\n",
     "        # run_ts = r.get(\"run_ts\")\n",
@@ -429,7 +429,7 @@
     "        # if rd is None:\n",
     "        #     rd = build_run_date(run_ts)\n",
     "\n",
-    "        row_log_id = r.get(\"log_id\") or f\"{run_log_id}_{uuid4().hex[:8]}\"\n",
+    "        log_id = r.get(\"log_id\") or f\"{run_log_id}_{uuid4().hex[:8]}\"\n",
     "        partition_key = r.get(\"partition_key\") or r.get(\"run_ts\")\n",
     "        \n",
     "        # Truncate error message\n",
@@ -437,7 +437,7 @@
     "        \n",
     "        rows.append(\n",
     "            (\n",
-    "                row_log_id,\n",
+    "                log_id,\n",
     "                run_log_id,\n",
     "                r.get(\"run_id\"),\n",
     "                r.get(\"run_date\"),\n",
@@ -456,7 +456,7 @@
     "                r.get(\"delta_table\"),\n",
     "            )\n",
     "        )\n",
-    "    \n",
+    "\n",
     "    df = spark.createDataFrame(rows, schema=bronze_processing_log_schema)\n",
     "    \n",
     "    (df.write\n",
