--- a/notebooks/10_bronze_load.ipynb
+++ b/notebooks/10_bronze_load.ipynb
@@ -217,6 +217,7 @@
     "    table_def: Dict[str, Any],\n",
     "    source_name: str,\n",
     "    run_ts: str,\n",
+    "    run_date: str,\n",
     "    base_files: str, #= \"greenhouse_sources\",\n",
     "    debug: bool = False\n",
     ") -> Dict[str, Any]:\n",
@@ -275,6 +276,7 @@
     "        return {\n",
     "            \"log_id\": log_id,\n",
     "            \"run_id\": RUN_ID,\n",
+    "            \"run_date\": run_date,\n",
     "            \"run_ts\": run_ts,\n",
     "            \"source\": source_name,\n",
     "            \"table_name\": table_name,\n",
@@ -327,6 +329,7 @@
     "            return {\n",
     "                \"log_id\": log_id,\n",
     "                \"run_id\": RUN_ID,\n",
+    "                \"run_date\": run_date,\n",
     "                \"run_ts\": run_ts,\n",
     "                \"source\": source_name,\n",
     "                \"table_name\": table_name,\n",
@@ -351,6 +354,7 @@
     "            return {\n",
     "                \"log_id\": log_id,\n",
     "                \"run_id\": RUN_ID,\n",
+    "                \"run_date\": run_date,\n",
     "                \"run_ts\": run_ts,\n",
     "                \"source\": source_name,\n",
     "                \"table_name\": table_name,\n",
@@ -463,6 +467,7 @@
     "            return {\n",
     "                \"log_id\": log_id,\n",
     "                \"run_id\": RUN_ID,\n",
+    "                \"run_date\": run_date,\n",
     "                \"run_ts\": run_ts,\n",
     "                \"source\": source_name,\n",
     "                \"table_name\": table_name,\n",
@@ -554,6 +559,7 @@
     "    return {\n",
     "        \"log_id\": log_id,\n",
     "        \"run_id\": RUN_ID,\n",
+    "        \"run_date\": run_date,\n",
     "        \"run_ts\": run_ts,\n",
     "        \"source\": source_name,\n",
     "        \"table_name\": table_name,\n",
