Fixed issue failed_tables

--- a/notebooks/01_utils_logging.ipynb
+++ b/notebooks/01_utils_logging.ipynb
@@ -402,7 +402,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def log_bronze_batch(bronze_results: List[Dict[str, Any]], run_log_id: str) -> None:\n",
+    "def log_bronze_batch(bronze_results: List[Dict[str, Any]], run_log_id: str, failed_tables: List[str]) -> None:\n",
     "    \"\"\"\n",
     "    Write many Bronze log records in a single batch append.\n",
     "    \n",
@@ -420,15 +420,7 @@
     "\n",
     "    rows = []\n",
     "    for r in bronze_results:\n",
-    "        # run_ts = r.get(\"run_ts\")\n",
-    "        # if not run_ts:\n",
-    "        #     raise ValueError(\"Bronze log record is missing run_ts\")\n",
-    "        \n",
-    "        # # Build run_date from run_ts\n",
-    "        # rd = r.get(\"run_date\")\n",
-    "        # if rd is None:\n",
-    "        #     rd = build_run_date(run_ts)\n",
-    "\n",
+    "        # Ensure log_id and partition_key are set\n",
     "        log_id = r.get(\"log_id\") or f\"{run_log_id}_{uuid4().hex[:8]}\"\n",
     "        partition_key = r.get(\"partition_key\") or r.get(\"run_ts\")\n",
     "        \n",
